[package]
name = "chat_server"
version = "0.1.0"
authors = ["Curtis Jones <ikubetoomuzik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "1.9"
uuid = { version = "0.8", features = ["v4"], default-features = false }
